--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-/out/
-/.idea/
-*.iml
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### IntelliJ IDEA ###
+.idea/
+.run
+.name
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
